Add a button to scrollView

--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -3,8 +3,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -23,7 +21,7 @@
             </objects>
             <point key="canvasLocation" x="556" y="224"/>
         </scene>
-        <!--Home-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
@@ -32,91 +30,28 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZp-AG-YS0">
-                                <rect key="frame" x="0.0" y="572" width="375" height="95"/>
-                                <color key="backgroundColor" red="0.66466850401713795" green="0.98558480340841703" blue="1" alpha="0.35000000000000003" colorSpace="calibratedRGB"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oxR-uE-HYA">
+                                <rect key="frame" x="0.0" y="490" width="600" height="60"/>
+                                <color key="backgroundColor" red="0.0" green="0.11684455389999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="280" id="7sl-Tw-ZDQ"/>
-                                    <constraint firstAttribute="height" constant="53" id="KhL-J8-7U6"/>
-                                    <constraint firstAttribute="width" constant="379" id="sNe-3s-jDv"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="95" id="uJB-Rl-y6V"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="xRE-va-5Ka"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" secondItem="bZp-AG-YS0" secondAttribute="height" multiplier="75:20" id="yqR-kC-f5p"/>
+                                    <constraint firstAttribute="height" constant="60" id="uWX-Ya-A26"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="7sl-Tw-ZDQ"/>
-                                        <exclude reference="KhL-J8-7U6"/>
-                                        <exclude reference="sNe-3s-jDv"/>
-                                        <exclude reference="xRE-va-5Ka"/>
-                                    </mask>
-                                </variation>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tUX-si-HHw">
-                                <rect key="frame" x="16" y="592" width="55" height="55"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="tUX-si-HHw" secondAttribute="height" multiplier="1:1" id="0J7-pV-FhN"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="55" id="Rcu-K9-jxO"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="icon.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="TipsTabView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="oD5-Qa-pj5"/>
-                                </connections>
-                            </button>
+                            </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="bZp-AG-YS0" secondAttribute="centerY" constant="-263" id="6Br-hg-DrG"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="16" id="Ba2-bn-ERt"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="5" id="F26-9X-agR"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="tUX-si-HHw" secondAttribute="bottom" constant="30" id="Hs9-bP-EH8"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jyV-Pf-zRb" secondAttribute="bottom" multiplier="0.25" constant="541" id="NaF-eN-Bwy"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="WIG-Ls-XF3"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bZp-AG-YS0" secondAttribute="bottom" constant="5" id="XQD-aQ-W9H"/>
-                            <constraint firstItem="tUX-si-HHw" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ec0-ed-1z1"/>
-                            <constraint firstAttribute="trailing" secondItem="bZp-AG-YS0" secondAttribute="trailing" constant="5" id="fcj-mY-BZp"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bZp-AG-YS0" secondAttribute="trailing" id="fef-pE-aya"/>
-                            <constraint firstAttribute="centerY" secondItem="tUX-si-HHw" secondAttribute="centerY" id="gds-Jb-AZx"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bZp-AG-YS0" secondAttribute="trailing" constant="-16" id="hgU-fM-9HY"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="top" relation="lessThanOrEqual" secondItem="tUX-si-HHw" secondAttribute="bottom" constant="-75" id="hk4-Wa-xhF"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="koS-12-Qfn"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="nrp-FB-9iZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bZp-AG-YS0" secondAttribute="trailing" constant="16" id="pe9-6q-cXK"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bZp-AG-YS0" secondAttribute="bottom" id="qlF-fN-0xQ"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bZp-AG-YS0" secondAttribute="bottom" constant="20" id="req-R4-Dkd"/>
-                            <constraint firstItem="bZp-AG-YS0" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="475" id="uoB-Uq-BS6"/>
-                            <constraint firstAttribute="centerY" secondItem="tUX-si-HHw" secondAttribute="centerY" id="wdF-SB-X23"/>
+                            <constraint firstItem="oxR-uE-HYA" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="WAp-qj-myd"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="oxR-uE-HYA" secondAttribute="bottom" constant="50" id="Wag-vp-aVW"/>
+                            <constraint firstAttribute="trailing" secondItem="oxR-uE-HYA" secondAttribute="trailing" id="vMg-Hb-hQF"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="6Br-hg-DrG"/>
-                                <exclude reference="Ba2-bn-ERt"/>
-                                <exclude reference="F26-9X-agR"/>
-                                <exclude reference="Hs9-bP-EH8"/>
-                                <exclude reference="NaF-eN-Bwy"/>
-                                <exclude reference="fcj-mY-BZp"/>
-                                <exclude reference="fef-pE-aya"/>
-                                <exclude reference="koS-12-Qfn"/>
-                                <exclude reference="nrp-FB-9iZ"/>
-                                <exclude reference="pe9-6q-cXK"/>
-                                <exclude reference="uoB-Uq-BS6"/>
-                                <exclude reference="gds-Jb-AZx"/>
-                                <exclude reference="wdF-SB-X23"/>
-                                <exclude reference="XQD-aQ-W9H"/>
-                                <exclude reference="req-R4-Dkd"/>
-                            </mask>
-                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Home" id="8HQ-61-3kr"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationItem key="navigationItem" id="8HQ-61-3kr"/>
+                    <connections>
+                        <outlet property="scrollView" destination="oxR-uE-HYA" id="gE5-gf-28p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
@@ -391,9 +326,6 @@
             <point key="canvasLocation" x="3434" y="151"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="icon.png" width="121" height="120"/>
-    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="kxZ-Qe-yiX"/>
     </inferredMetricsTieBreakers>
