--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -33,29 +33,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oxR-uE-HYA">
-                                <rect key="frame" x="0.0" y="490" width="600" height="60"/>
-                                <color key="backgroundColor" red="0.0" green="0.11684455389999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxR-uE-HYA">
+                                <rect key="frame" x="0.0" y="478" width="600" height="72"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="uWX-Ya-A26"/>
+                                    <constraint firstAttribute="height" constant="72" id="uWX-Ya-A26"/>
                                 </constraints>
                             </scrollView>
+                            <searchBar contentMode="redraw" backgroundImage="empty" translatesAutoresizingMaskIntoConstraints="NO" id="SVX-N1-dvH">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="xjv-eK-3Mc"/>
+                                </connections>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9AY-OF-044">
+                                <rect key="frame" x="180" y="130" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="brQ-aX-ZC2"/>
+                                    <constraint firstAttribute="width" constant="240" id="sRC-y0-yYM"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="SVX-N1-dvH" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" id="1od-MY-1Ng"/>
+                            <constraint firstAttribute="centerX" secondItem="9AY-OF-044" secondAttribute="centerX" id="ICB-9V-fcN"/>
                             <constraint firstItem="oxR-uE-HYA" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="WAp-qj-myd"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="oxR-uE-HYA" secondAttribute="bottom" constant="50" id="Wag-vp-aVW"/>
+                            <constraint firstItem="SVX-N1-dvH" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="fkV-yE-DU6"/>
+                            <constraint firstItem="9AY-OF-044" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="130" id="kdR-fs-fwb"/>
                             <constraint firstAttribute="trailing" secondItem="oxR-uE-HYA" secondAttribute="trailing" id="vMg-Hb-hQF"/>
+                            <constraint firstAttribute="trailing" secondItem="SVX-N1-dvH" secondAttribute="trailing" id="vlI-h3-r1f"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8HQ-61-3kr"/>
                     <connections>
                         <outlet property="scrollView" destination="oxR-uE-HYA" id="gE5-gf-28p"/>
+                        <outlet property="searchBar" destination="SVX-N1-dvH" id="rva-RE-ntA"/>
+                        <outlet property="searchDisplayController" destination="3n8-b6-vdZ" id="kSu-dw-biO"/>
+                        <outlet property="trashImageView" destination="9AY-OF-044" id="M0R-8v-r5d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="3n8-b6-vdZ">
+                    <connections>
+                        <outlet property="delegate" destination="vXZ-lx-hvc" id="dyw-vh-ELv"/>
+                        <outlet property="searchBar" destination="SVX-N1-dvH" id="jEk-qh-pl5"/>
+                        <outlet property="searchContentsController" destination="vXZ-lx-hvc" id="2oE-No-9Uz"/>
+                        <outlet property="searchResultsDataSource" destination="vXZ-lx-hvc" id="Dev-oP-wVb"/>
+                        <outlet property="searchResultsDelegate" destination="vXZ-lx-hvc" id="pL2-tD-hGD"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1215.5" y="223.5"/>
+            <point key="canvasLocation" x="1215" y="223"/>
         </scene>
         <!--ごみの出し方-->
         <scene sceneID="d2g-xc-CEK">
@@ -326,7 +355,10 @@
             <point key="canvasLocation" x="3434" y="151"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="empty" width="1" height="1"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kxZ-Qe-yiX"/>
+        <segue reference="vVm-39-T7Z"/>
     </inferredMetricsTieBreakers>
 </document>
